[GTK][WPE] Unreviewed build fix for Debian Stable after r288872 https://bugs.webkit.org/show_bug.cgi?id=236215

* dom/AbortSignal.cpp:
(WebCore::AbortSignal::timeout):
* platform/graphics/PlatformDisplay.cpp:



Canonical link: https://commits.webkit.org/246881@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289195 268f45cc-cd09-0410-ab3c-d52691b4dbfc